--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,8 +34,8 @@
     <!-- Fragments -->
     <string name="title_activity_home">HomeActivity</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Cart</string>
-    <string name="title_notifications">Account</string>
+    <string name="title_cart">Cart</string>
+    <string name="title_account">Account</string>
 
     <!-- Home -->
     <string name="banner_promo">Promoción especial de barbería</string>
